--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+langchain
+chromadb
+PyPDF2
+tiktoken
+openai
+python-dotenv
 streamlit
-PyMuPDF
+pypdf
 sentence-transformers
-faiss-cpu
-requests
-numpy
